# tasktracker_pkg

./: .gitignore  DEVELOPMENT.md  MANIFEST.in  README.md  example_usage.py  pyproject.toml
src/tasktracker/: .config.json  __init__.py  cli.py  manager.py  models.py  repl.py  storage.py
src/tasktracker/task_data/: tasks.json
src/tasktracker/task_data_example/: tasks_example.json
tests/: __main__.py  test_repl.py  test_tasktracker.py
