[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tasktracker"
version = "0.9.3"
description = "A simple realistic Python task tracking package with CLI support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "Jordan Kendall" }
]
dependencies = [
  "colorama>=0.4.6"
]

[project.scripts]
tasktracker = "tasktracker.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]